--- a/Home/styles.css
+++ b/Home/styles.css
@@ -1112,6 +1112,7 @@ i{
 
 /* PAGE 2 WORK */
 #work{
+    position: relative;
     height: 710px;
     width: 100%;
     border: 1px solid #27282af0;
@@ -1119,24 +1120,133 @@ i{
     background-image: url(assets/WorkPageBg.png);
     background-repeat: repeat;
     background-position: center;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    flex: none;
+    gap: 32px;
+    /* height: min-content; */
+    overflow: visible;
+    padding: 100px 56px;
+}
+
+#work-header-container{
+    height: 28px;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#work-header-left{
+    height: 28px;
+    /* max-width: 572.09px; */
+    width: 100%;
+    /* background-color: blue; */
+    display: flex;
+    align-items: center;
 }
 
 
+#work-header-left p{
+    width: 100%;
+    color: #ffffff9b;
+    font-size: 16px;
+    font-family: "Manrope", serif;
+    font-optical-sizing: auto;
+    line-height: 16px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: -0.2px;
+}
 
+#work-header-right{
+    height: 28px;
+    width: 106.31px;
+    /* background-color: purple; */
+    display: flex;
+    align-items: center;
+}
 
+#work-header-right a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+#work-header-right a p{
+    min-width: 82.31px;
+    width: 100%;
+    color: #ffffff9b;
+    font-size: 16px;
+    font-family: "Manrope", serif;
+    font-optical-sizing: auto;
+    line-height: 16px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: -0.2px;
+    cursor: pointer;
+    /* transition: all 0.05s linear; */
+}
 
+#work-header-right i{
+    height: 100%;
+    width: 100%;
+    color: #ffffff9b;
+    font-size: 17px;
+    font-family: "Manrope", serif;
+    font-optical-sizing: auto;
+    line-height: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-left: 5px;
+    transition: all 0.1s linear;
+}
 
+#work-header-right a:hover p{
+    color: #ffffff;
+}
 
+#work-header-right a:hover i{
+    transform: rotate(45deg);
+    color: #ffffff;
+}
 
+/* carousel */
+#work-carousel-container{
+    position: relative;
+    height: 450px;
+    width: 100%;
+    background-color: red;
+}
 
+#carousel{
+    height: 100%;
+    width: 100%;
+    background-color: blue;
+}
 
-
-
-
-
-
-
+#carousel ul{
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+    position: relative;
+    display: flex;
+    flex: 1 1 100%;
+    width: 100%;
+    height: 100%;
+    gap: 24px;
+    align-items: center;
+    flex-direction: row;
+    overflow: auto hidden;
+    scroll-snap-type: x mandatory;
+    border-radius: 0px;
+    mask-image: linear-gradient(to right, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 25%, rgb(0, 0, 0) 75%, rgba(0, 0, 0, 0) 100%);
+}
 
 
 
@@ -1271,6 +1381,7 @@ i{
         margin-top: 55px;
         height: 2586px;
         background-position: top;
+        padding: 70px 40px;
     }
 }
 
@@ -1375,6 +1486,7 @@ i{
         margin-top: 58px;
         height: 1564px;
         background-position: top;
+        padding: 70px 20px;
     }
 }
 
@@ -1488,5 +1600,6 @@ i{
         margin-top: 70px;
         height: 1564px;
         background-position: top;
+        padding: 70px 20px;
     }
 }
